refactor rebuild for jdk8